# uv-workspace-codegen

./: CHANGELOG.md  CLAUDE.md  README.md  library_cicd.template.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflow-templates/: default.template.yml  package.template.yml  test.template.yml
.github/workflows/: default-uv-workspace-codegen.yml  package-uv-workspace-codegen.yml  test-uv-workspace-codegen.yml
src/gh_actions_codegen/: __main__.py  main.py
src/uv_workspace_codegen/: discover.py  main.py
src/uv_workspace_codegen/templates/: package.template.yml
templates/: lib.template.yml  project.template.yml  tool.template.yml
tests/: __init__.py  test_diff_mode.py  test_main.py  test_multi_template.py  test_target_dir.py
tests/workspaces/multi_template/: pyproject.toml
tests/workspaces/multi_template/.github/workflow-templates/: package.extra.template.yml  package.template.yml
