[project]
name = "gh-actions-codegen"
version = "0.3.0"
description = "Generate individual CI/CD workflows for packages in the workspace"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jinja2>=3.1.6",
    "jinja2-ansible-filters>=1.3.2",
    "pyyaml>=6.0.1",
]

[project.scripts]
gh-actions-codegen = "gh_actions_codegen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_actions_codegen"]

[tool.gh-actions-codegen]
generate = true
template_type = "tool"
generate_standard_pytest_step = true
typechecker = "mypy"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "types-pyyaml>=6.0.12.20250822",
]
